--- a/src/KnxNet.Tunneling/project.json
+++ b/src/KnxNet.Tunneling/project.json
@@ -3,7 +3,8 @@
 
   "dependencies": {
     "KnxNet.Core": "1.0.0-*",
-    "NETStandard.Library": "1.6.0"
+    "NETStandard.Library": "1.6.0",
+    "System.Net.NameResolution": "4.0.0"
   },
   "frameworks": {
     "netcoreapp1.0": {
