Spaces -> tabs + convert to correct core version

--- a/src/KnxNet.Core/project.json
+++ b/src/KnxNet.Core/project.json
@@ -1,14 +1,15 @@
-﻿{
-  "dependencies": {
-    "NETStandard.Library": "1.6.0"
-  },
-  "frameworks": {
-    "netcoreapp1.0": {
-      "imports": [
-        "dotnet5.6",
-        "portable-net45+win8"
-      ]
-    }
-  },
-  "version": "0.1.0-*"
+{
+	"version": "0.0.1-*",
+
+	"dependencies": {
+		"NETStandard.Library": "1.6.0",
+	},
+
+	"frameworks": {
+		"netcoreapp1.0": {
+			"imports": "portable-net45+win8",
+			"dependencies": {
+			}
+		}
+	}
 }
