--- a/src/KnxNet.Tunneling/project.json
+++ b/src/KnxNet.Tunneling/project.json
@@ -1,17 +1,16 @@
 ﻿{
-  "version": "0.1.0-*",
+	"version": "0.0.1-*",
 
-  "dependencies": {
-    "KnxNet.Core": "0.1.0-*",
-    "NETStandard.Library": "1.6.0",
-    "System.Net.NameResolution": "4.0.0"
-  },
-  "frameworks": {
-    "netcoreapp1.0": {
-      "imports": [
-        "dotnet5.6",
-        "portable-net45+win8"
-      ]
-    }
-  }
+	"dependencies": {
+		"NETStandard.Library": "1.6.0",
+		"KnxNet.Core": "0.0.1-*"
+	},
+
+	"frameworks": {
+		"netcoreapp1.0": {
+			"imports": "portable-net45+win8",
+			"dependencies": {
+			}
+		}
+	}
 }
